# ProjectNeph

./: .cursorignore  .cursorrules  .gitignore  Blueprint.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts
.cursor/: settings.json
.cursor/agents/: llm-council.md
apps/pyside/: pyproject.toml
apps/pyside/nephis_pyside/: embeddings.py  pipe_server.py  stt_whisper.py  tts_edge.py  tts_piper.py  vad_silero.py
docs/: ARCHITECTURE.md  AUDIT_CHECKLIST.md  BLUEPRINT_STATUS.md  COMPAT.md  CURSOR_WORKFLOW.md  EMBEDDING.md  FUTURE.md  INSTALL_WINDOWS.md  IPC_BINDINGS.md  NEPH_TRUST_ROADMAP_v2.md  PERFORMANCE.md  RELEASE_NOTES_v0.1.0-alpha.md  SECURITY.md  SETUP.md  SUSTAINABILITY.md  V0_2_PLAN.md
e2e/: smoke.spec.ts
scripts/: check-rust-line-length.ps1  install_pyside.py  setup_nodeside.ps1  verify.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent.rs  apps.rs  bus.rs  confirmation.rs  db.rs  diagnostics.rs  dpapi_win.rs  embeddings.rs  execution.rs  files.rs  hotkey.rs  lib.rs  llm.rs  llm_anthropic.rs  model_router.rs  models.rs  network_allowlist.rs  path_policy.rs  rate_limit.rs  redaction.rs  router.rs  secrets.rs  skills.rs  startup.rs  telemetry.rs  webview2.rs  win_compat.rs
src-tauri/src/actors/: automation.rs  cancel.rs  executor.rs  memory.rs  mod.rs  planner.rs  provider_router.rs  ui_bridge.rs  voice.rs
src-tauri/src/ctx/: active_window.rs  clipboard.rs  mod.rs  ocr.rs  screenshot.rs
src-tauri/src/db/migrations/: V1__init.sql  V2__embeddings.sql  V3__lineage.sql  V4__drop_workflows.sql  V5__drop_logs_table.sql  V6__file_index_fts.sql  V7__scheduled_jobs.sql  V8__voice_sessions.sql  V9__admission_queue.sql
src-tauri/src/domains/: browser.rs  filesystem.rs  mod.rs  network.rs  shell.rs
src-tauri/src/ipc/: events.rs  groq_stt.rs  mod.rs  nodeside.rs  pyside.rs  tauri_cmds.rs
src-tauri/src/mcp/: client.rs  mod.rs  server.rs
src-tauri/src/memory/: admission.rs  cold.rs  hot.rs  mod.rs  procedural.rs  warm.rs
src-tauri/src/providers/: anthropic.rs  elevenlabs.rs  gemini.rs  groq.rs  local_llama.rs  mod.rs  openrouter.rs
src-tauri/src/safety/: capabilities.rs  mod.rs  risk.rs
src-tauri/src/secrets_mod/: mod.rs
src-tauri/src/state/: admission.rs  exports.rs  file_ops.rs  index.rs  llm_bridge.rs  memory.rs  mod.rs  notes.rs  runner.rs
src-tauri/src/store/: mod.rs
src-tauri/src/tools/: manifest.rs  mod.rs  preview.rs  registry.rs  risk.rs  schema.rs
src-tauri/src/traits/: domain.rs  embedder.rs  llm.rs  memory.rs  mod.rs  planner.rs  stt.rs  tool.rs  tts.rs
(+47 files in other folders)
