[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
global-hotkey = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
refinery = { version = "0.8", features = ["rusqlite"] }
keyring = { version = "3", features = ["windows-native"] }
dirs-next = "2"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
trash = "5"
dunce = "1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
schemars = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
regex = "1"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
fastembed = "4"
arboard = "3"
sysinfo = "0.37"
serde_yaml = "0.9"
urlencoding = "2"
url = "2"
walkdir = "2"
lopdf = "0.34"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["dpapi", "wincrypt", "winbase"] }

[dev-dependencies]

