[project]
name = "nephis-pyside"
version = "0.1.0"
description = "Nephis ML sidecar — STT, TTS, VAD, embeddings"
requires-python = ">=3.11"

[project.dependencies]
# STT
faster-whisper = ">=1.0.0"   # CPU int8 fallback
groq = ">=0.9.0"              # Groq Whisper API client

# TTS
edge-tts = ">=6.1.0"

# VAD
silero-vad = ">=5.1.0"
onnxruntime = ">=1.18.0"

# Embeddings (Phase 2)
sentence-transformers = ">=3.0.0"

# Windows IPC
pywin32 = ">=306"

# Utils
numpy = ">=1.26.0"
soundfile = ">=0.12.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nephis_pyside"]
